fix code style for wrapping cooler scroll bar

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,6 +25,7 @@ code {
   padding: 5px;
   display: block;
   background-color: $dark-background-secondary;
+  white-space: pre-wrap;
 }
 
 video {
@@ -547,3 +548,25 @@ img {
   }
 }
 */
+
+
+*::-webkit-scrollbar-track
+{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: $dark-background;
+}
+
+*::-webkit-scrollbar
+{
+  width: 12px;
+  background-color: $dark-background;
+
+}
+
+*::-webkit-scrollbar-thumb
+{
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #555;
+}
